# OpenCV_RTC

OpenCVExample/OpenCVExample/: Adding_a_Trackbar_to_our-applications.cpp  Adding_borders_to_your_images.cpp  Adding_two_images_using_OpenCV.cpp  CMakeLists.txt  CannyDetector_Demo.cpp  Changing_the_contrast_and_brightness_of_an_image.cpp  EqualizeHist_Demo.cpp  Geometric_Transforms_Demo.cpp  HoughCircle_Demo.cpp  HoughLines_Demo.cpp  Laplace_Demo.cpp  LoadAndDisplayAnImage.cpp  LoadAndDisplayAnImage.h  Load_Display.cpp  Load_Modify_Save.cpp  Morphology_1.cpp  Morphology_2.cpp  OpenCVHelloWorld.cpp  OpenCVHelloWorld.h  OpenCVMain.cpp  Pyramids.cpp  Remap_Demo.cpp  Smoothing.cpp  Sobel_Demo.cpp  Threshold.cpp  calcHist_Demo.cpp  compareHist_Demo.cpp  how_to_scan_images.cpp  mat_mask_operations.cpp  mat_the_basic_image_container.cpp
